data/derived/comb/progs/unify/prog7699.ml.out
Characters 84-85:
  List.fold_left (fun l -> match l with h::t -> if h = 0 then t else l) [] l;;
                                                              ^
Error: This expression has type int list
       but an expression was expected of type 'a -> int list
